<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">SatStat</string>
    <string name="action_settings">Settings</string>
    <string name="action_record">Record</string>
    <string name="action_stop_record">Stop recording</string>
    <string name="action_agps">Reload AGPS data</string>
    <string name="action_legend">Legend</string>
    <string name="action_about">About</string>
    <string name="dot" translatable="false">&#x25a0;</string>
    <string name="smallDot" translatable="false">&#x25fc;</string>
    <string name="dotSpace" translatable="false">&#x25a0;&#x00a0;</string>
    <string name="error_write_file">Error writing to file</string>
    <string name="error_ext_storage">External storage not available</string>
    <string name="info_start_rec">Started recording</string>
    <string name="notify_record_title">Recording sensor data</string>
    <string name="notify_record_body">Touch to stop recording</string>
    <string name="status_agps">AGPS data reload requested – note that Android does not report success or failure</string>
    <string name="status_agps_captive">Can\'t refresh data – launch browser, sign into the network and try again</string>
    <string name="status_agps_error">No network available, can\'t reload AGPS data</string>
    <string name="title_section1">GPS</string>
    <string name="title_section2">Sensors</string>
    <string name="title_section3">Radio</string>
    <string name="title_section4">Map</string>
    <string name="title_gps_lat">Latitude</string>
    <string name="title_gps_lon">Longitude</string>
    <string name="title_gps_coord">Coordinates</string>
    <string name="title_gps_decl">Decl.</string>
    <string name="title_gps_speed">Speed</string>
    <string name="title_gps_alt">Altitude</string>
    <string name="title_gps_time">Last Fix Obtained</string>
    <string name="title_gps_bear">Bearing</string>
    <string name="title_gps_orient">Orientation</string>
    <string name="title_gps_acc">Error</string>
    <string name="title_gps_sats">Satellites</string>
    <string name="title_gps_ttff">TTFF (s)</string>
    <string name="value_none">–</string>
    <string name="value_N">N</string>
    <string name="value_NNE">NNE</string>
    <string name="value_NE">NE</string>
    <string name="value_ENE">ENE</string>
    <string name="value_E">E</string>
    <string name="value_ESE">ESE</string>
    <string name="value_SE">SE</string>
    <string name="value_SSE">SSE</string>
    <string name="value_S">S</string>
    <string name="value_SSW">SSW</string>
    <string name="value_SW">SW</string>
    <string name="value_WSW">WSW</string>
    <string name="value_W">W</string>
    <string name="value_WNW">WNW</string>
    <string name="value_NW">NW</string>
    <string name="value_NNW">NNW</string>
    <string name="title_sensor_acc">Acceleration and Gravity</string>
    <string name="title_sensors_accTotal">Σg (m/s²)</string>
    <string name="title_sensors_accX">gx (m/s²)</string>
    <string name="title_sensors_accY">gy (m/s²)</string>
    <string name="title_sensors_accZ">gz (m/s²)</string>
    <string name="title_sensor_rot">Rotation</string>
    <string name="title_sensors_rotTotal">Σω (rad/s)</string>
    <string name="title_sensors_rotX">ωx (rad/s)</string>
    <string name="title_sensors_rotY">ωy (rad/s)</string>
    <string name="title_sensors_rotZ">ωz (rad/s)</string>
    <string name="title_sensor_or">Orientation</string>
    <string name="title_sensors_orAzimuth">Azimuth</string>
    <string name="title_sensors_orAziText">Orientation</string>
    <string name="title_sensors_orPitch">Pitch</string>
    <string name="title_sensors_orRoll">Roll</string>
    <string name="title_sensor_mag">Magnetic Field</string>
    <string name="title_sensors_magTotal">ΣB (µT)</string>
    <string name="title_sensors_magX">Bx (µT)</string>
    <string name="title_sensors_magY">By (µT)</string>
    <string name="title_sensors_magZ">Bz (µT)</string>
    <string name="title_sensor_met">Meteorology</string>
    <string name="title_sensors_metTemp">&#x00a0;°C</string>
    <string name="title_sensors_metPressure">&#x00a0;hPa</string>
    <string name="title_sensors_metHumid">Relative Humidity (%)</string>
    <string name="title_sensor_misc">Miscellaneous</string>
    <string name="title_sensors_light">&#x00a0;lux</string>
    <string name="title_sensors_proximity">Proximity (cm)</string>
    <string name="title_radio_gsm">GSM</string>
    <string name="title_radio_mcc">MCC</string>
    <string name="title_radio_mnc">MNC</string>
    <string name="title_radio_cellid">Cell ID</string>
    <string name="title_radio_lac">LAC</string>
    <string name="title_radio_psc">PSC</string>
    <string name="title_radio_asu">ASU</string>
    <string name="title_radio_cdma">CDMA</string>
    <string name="title_radio_sid">SID</string>
    <string name="title_radio_nid">NID</string>
    <string name="title_radio_bsid">BSID</string>
    <string name="title_radio_lte">LTE</string>
    <string name="title_radio_tac">TAC</string>
    <string name="title_radio_pci">PCI</string>
    <string name="title_radio_wifi">WiFi</string>
    <string name="title_radio_mac">BSSID (MAC)</string>
    <string name="title_radio_channel">Ch</string>
    <string name="title_radio_level">dBm</string>
    <string name="title_activity_about">About</string>
    <string name="about_caption">Location, Sensor and Radio Network Status</string>
    <string name="about_version">Version</string>
    <string name="about_text">&lt;p&gt;
        If something doesn\'t work the way it should, or if you have an idea to make this
        app even greater, please report it at:
        &lt;br/&gt;
        &lt;a href="https://github.com/mvglasow/satstat/issues&gt;https://github.com/mvglasow/satstat/issues&lt;/a&gt;
        &lt;/p&gt;&lt;p&gt;
        Copyright &#169; 2013 – 2018 Michael von Glasow and contributors
        &lt;br/&gt;
        Portions &#169; Jonathan Stott, k9mail, mapsforge.org, Polidea
        &lt;/p&gt;&lt;p&gt;
        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.
        &lt;/p&gt;&lt;p&gt;
        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
        GNU General Public License for more details.
        &lt;/p&gt;&lt;p&gt;
        You should have received a copy of the GNU General Public License
        along with this program. If not, see 
        &lt;a href="http://www.gnu.org/licenses/"&gt;http://www.gnu.org/licenses/&lt;/a&gt;.
        &lt;/p&gt;&lt;p&gt;
        Map data and information provided by MapQuest, 
        &lt;a href="http://www.openstreetmap.org/copyright"&gt;OpenStreetMap&lt;/a&gt; 
        and contributors, 
        &lt;a href="http://wiki.openstreetmap.org/wiki/Legal_FAQ#3a._I_would_like_to_use_OpenStreetMap_maps._How_should_I_credit_you.3F"&gt;ODbL&lt;/a&gt;.
        &lt;/p&gt;&lt;p&gt;
        The source code for this application is at:
        &lt;br/&gt;
        &lt;a href="https://github.com/mvglasow/satstat&gt;https://github.com/mvglasow/satstat&lt;/a&gt;</string>
    <string name="unit_degree">°</string>
    <string name="unit_km_h">&#x00a0;km/h</string>
    <string name="unit_mph">&#x00a0;mph</string>
    <string name="unit_kn">&#x00a0;kn</string>
    <string name="unit_meter">&#x00a0;m</string>
    <string name="unit_feet">&#x00a0;ft</string>
    <string name="pref_notify">GPS fix notification</string>
    <string name="pref_notify_summary">Notify me when an application gets my location from GPS</string>
    <string name="pref_search">GPS search notification</string>
    <string name="pref_search_summary">Notify me when an application is searching for my location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notify_nolocation_title">Searching for location</string>
    <string name="notify_nolocation_body">Touch to view status</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_agps">AGPS Data Update</string>
    <string name="pref_wifi">On WiFi connect</string>
    <string name="pref_wifi_summary">Refresh AGPS data when my device connects to a WiFi network</string>
    <string name="pref_freq">Update frequency</string>
    <string name="pref_freq_summary" translatable="false">%s</string>
    <string-array name="prefs_freq_keys">
        <item>Every time</item>
        <item>Once a day</item>
        <item>Once in 2 days</item>
        <item>Once in 3 days</item>
        <item>Once in 4 days</item>
        <item>Once in 5 days</item>
        <item>Once in 6 days</item>
        <item>Once a week</item>
    </string-array>
    <string-array name="prefs_freq_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="pref_lastupdate">Last update</string>
    <string name="pref_lastupdate_summary">%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS</string>
    <string name="pref_networks">Networks</string>
    <string name="pref_networks_summary">Refresh AGPS data when my device connects to one of the selected networks</string>
    <string name="pref_map">Map</string>
    <string name="pref_loc_prov">Location Sources</string>
    <string name="pref_loc_prov_summary">Show selected location sources on the map</string>
    <string name="pref_data">Data display</string>
    <string name="pref_unit">Use metric units</string>
    <string name="pref_unit_summary">If unchecked, Imperial units will be used (except in sensor view)</string>
    <string name="pref_knots">Show speed in knots</string>
    <string name="pref_knots_summary">If unchecked, metric or imperial units (as selected above) will be used</string>
    <string name="pref_coord">Coordinates</string>
    <string-array name="prefs_coord_keys">
        <item>Decimal degrees</item>
        <item>Degrees, minutes</item>
        <item>Degrees, minutes, seconds</item>
        <item>MGRS</item>
        <item>UTM</item>
    </string-array>
    <string-array name="prefs_coord_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_utc">Display GPS time in UTC</string>
    <string name="pref_utc_summary">Display GPS fix time in UTC rather than in local time</string>
    <string name="pref_cid">Split UMTS/LTE cell IDs</string>
    <string name="pref_cid_summary">Split cell IDs into RNCID/CID or eNodeB/sector ID</string>
    <string name="osm_attribution" translatable="false">© OpenStreetMap contributors</string>
    <string name="title_activity_legend">Legend</string>
    <string name="title_legend_gps">GPS</string>
    <string name="pref_wifi_sort">Sort WiFi networks</string>
    <string name="pref_map_offline">Use offline map</string>
    <string name="pref_map_offline_summary">Render maps on the device (requires downloading an offline map)</string>
    <string name="pref_map_path">Offline map folder</string>
    <string name="pref_map_download">Download offline map</string>
    <string name="pref_map_purge">Clear map tile cache</string>
    <string name="pref_map_purge_summary">Force all tiles to be fetched or rendered again, useful for troubleshooting</string>
    <string name="pref_cid2">Display both cell ID formats</string>
    <string name="pref_cid2_summary">Show both split and non-split forms, with the one selected above appearing on top</string>
</resources>